add: list assets